CHANGES

Trunk
	Fixed problem with encodings handled by iconv and not by
	libxml2 (directly) in srcml2src.

	Fixed problem with encodings handled by iconv and not by
	libxml2 (directly).  Also made encoding changes more efficient in src2srcml.

	Attribute info for srcml2src now has output of nothing for missing attribute,
	and output of empty line for blank value of attribute.
	
	Added hidden long info option.

	Check for invalid combination of xml output and source encoding on srcml2src.

	Output encoding with new option "--info" in srcml2src.

	With multiple input file and in verbose mode output name of file (as in file list mode).
	
	Change output of errors in srcMLTranslator to std::cerr.
	
	Put (temporary) fix for encoding problem with srcml2src --xml mode.

	Removed unused MarkerToken.

	Add comment handling to srcml2src extraction.

	Copy non-standard attributes on nested unit in srcml2src.

	Add preliminary option "--info" to srcml2src.


Jan-30-2006-Beta

	Better error detection for unit numbers greater than the number of units.

	Remove special handling for ANTLR bug in 2.7.5.

	Fix bug with else bound to wrong if.

	Fix bug with misidentification of no parameter macro as call when followed by end of file.

	Fix bug with misidentification of macro as call when followed by end of file.

	Fix bug with processing #if 0 block correctly in guessing mode.

	Fix bug with processing include directive correctly in guessing mode.

	Return status codes for src2srcml and srcml2src.

	More intelligent handling of unit attributes for units inside of compound nested documents.

	Output error when translating entire compound document (without extracting or specifying nested unit).

	Fix misidentification of call as macro with starting '&' operator.

	Put in full handling of Java interfaces.

	Fix regression error for Java packages.

	Output source encoding in src2srcml when in verbose mode.

	Write verbose output to standard error.
